# bella-tracer

./: Makefile  api_gateway.py  docker-compose.yaml  fraud.py  logging_config.py  main.py  order.py  payment.py  pyproject.toml  run_services.sh
src/bella_tracer/prompts/: __init__.py  knowledge_graph.py
src/bella_tracer/tracer/: __init__.py  main.py
src/bella_tracer/tracer/api/: app.py
src/bella_tracer/tracer/api/routers/: __init__.py  report.py
src/bella_tracer/tracer/example_api_setup/: __init__.py  step_1_api_gateway.py  step_2_order.py  step_3_payment.py  step_4_fraud.py
src/bella_tracer/tracer/interfaces/: kafka.py
src/bella_tracer/tracer/prompts/: knowledge_graph.py
src/bella_tracer/tracer/services/: __init__.py  knowledge_graph.py  rag.py
src/bella_tracer/tracer/workflows/: knowledge_graph_parser.py
src/bella_tracer/workflows/: knowledge_graph_parser.py
src/tracer/: __init__.py
src/tracer/interfaces/: __init__.py  neo4j.py  openai.py
src/tracer/services/: knowledge_graph.py
src/tracer/workflows/: __init__.py  knowledge_graph_parser.py
