[project]
name = "bella-tracer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.0",
    "dotenv>=0.9.9",
    "faker>=37.12.0",
    "fastapi>=0.120.4",
    "httpx>=0.28.1",
    "hypercorn>=0.17.3",
    "kafka-python>=2.2.15",
    "prefect>=3.5.0",
]
