[project]
name = "bella-tracer"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.12.0",
    "click>=8.3.0",
    "dotenv>=0.9.9",
    "faker>=37.12.0",
    "fastapi>=0.120.4",
    "httpx>=0.28.1",
    "hypercorn>=0.17.3",
    "kafka-python>=2.2.15",
    "neo4j>=6.0.2",
    "openai>=2.6.1",
    "prefect>=3.5.0",
]
